@@ -34,9 +34,29 @@ require_once TEMPLATES_PATH . '/tpl_header.inc';
 
 if (userIsLoggedIn()) {
     // Home for members!
+    $htmlMonthTop = getHTMLRankingTable(
+        $db->getAll(
+            "SELECT * FROM vmembers "
+            . "ORDER BY month_points DESC, badges DESC, username ASC",
+            'month_points'
+        )
+    );
+    $htmlTop = getHTMLRankingTable(
+        $db->getAll(
+            "SELECT * FROM vmembers "
+            . "ORDER BY total_points DESC, badges DESC, username ASC",
+            'total_points'
+        )
+    );
     require_once TEMPLATES_PATH . '/tpl_home_member.inc';
 } else {
     // Home for anonymous
+    $usertext = 'usuari';
+    $logintext = 'Accedir';
+    if ('LDAP' == $CONFIG['authentication']['type']) {
+        $usertext = 'usuari LDAP';
+        $logintext = 'Accedir amb LDAP';
+    }
     require_once TEMPLATES_PATH . '/tpl_home_anonymous.inc';
 }
 
@@ -44,7 +64,7 @@ require_once TEMPLATES_PATH . '/tpl_footer.inc';
 exit();
 
 /*** FUNCTIONS ***/
-function printHTMLRankingTable($users = array(), $show = 'total_points')
+function getHTMLRankingTable($users = array(), $show = 'total_points')
 {
     global $db, $session;
 
@@ -52,19 +72,6 @@ function printHTMLRankingTable($users = array(), $show = 'total_points')
     $top3 = 3;
     $top10 = 10;
 
-    ?>
-    <table class="table table-hover" >
-    <thead>
-        <tr>
-            <th class="text-center">Posició</th>
-            <th>Usuari</th>
-            <th>Experiència</th>
-            <th>Nivell</th>
-            <th class="text-center">Insígnies</th>
-        </tr>
-    </thead>
-    <tbody>
-    <?php
     $position = 1;
     $currentranking = 0;
     $toprest = $top10 - $top3;
@@ -127,8 +134,4 @@ function printHTMLRankingTable($users = array(), $show = 'total_points')
             echo $ranking[$i];
         }
     }
-    ?>
-        </tbody>
-    </table>
-    <?php
 }
