@@ -1,5 +1,6 @@
 Version 2.xx (developement version)
 ------------
+* Move some HTML code to templates files
 
 Version 2.11
 ------------
